--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -79,17 +78,6 @@
     </div>
 </script>
 
-<script id="roomsTemplate" type="text/x-handlebars-template">
-    <li>
-        <div>Комнаты ({{rooms.length}})</div>
-        <ul>
-            {{#each rooms}}
-            <li>{{this}}</li>
-            {{/each}}
-        </ul>
-    </li>
-</script>
-
 <script id="usersTemplate" type="text/x-handlebars-template">
     <li>
         <div>УЧАСТНИКИ ({{users.length}})</div>
@@ -113,5 +101,6 @@
     </div>
 </script>
 <script src="main.js"></script>
+<!--<script src="helpers/main.js"></script>-->
 </body>
 </html>
