--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         </div>
     </div>
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js" type="text/javascript"></script>
 <script src="main.js"></script>
 <!--<script src="helpers/main.js"></script>-->
 </body>
