--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <meta charset="UTF-8">
     <meta http-equiv='Content-type' content='text/html; charset=UTF-8'>
-    <link rel="stylesheet" href="style.css">
-    <title>Loft School - Mega Chat</title>
+    <link rel="stylesheet" href="css/main.css">
+    <title>Mega Chat</title>
 </head>
 <body>
-<div class="gl-block table">
+<div class="container table">
     <div class="table-cell">
         <div class="login table">
             <div class="table-cell">
@@ -18,9 +19,7 @@
         </ul>
     </div>
     <div class="table-cell">
-        <div id="people">
-            <div id="people-in">
-            </div>
+        <div id="comments">
         </div>
         <div id="search">
             <form action="">
@@ -80,14 +79,14 @@
         <div>УЧАСТНИКИ ({{users.length}})</div>
         <ul>
             {{#each users}}
-            <li data-login="{{login}}">{{name}}</li>
+            <li data-login="{{login}}">{{login}}</li>
             {{/each}}
         </ul>
     </li>
 </script>
 
 <script id="messageTemplate" type="text/x-handlebars-template">
-    <div class="people">
+    <div class="comment">
         <div class="table">
             <div class="table-cell"><img src="http://localhost:5000/photos/{{user.login}}" class="avatar-img" data-login="{{user.login}}"></div>
             <div class="table-cell">
@@ -99,6 +98,5 @@
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js" type="text/javascript"></script>
 <script src="main.js"></script>
-<!--<script src="helpers/main.js"></script>-->
 </body>
 </html>
